<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/calvary"
        android:layout_marginTop="-45dp"
        android:id="@+id/logo" />

    <TextView
        android:text="@string/eventInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:id="@+id/textView6"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/header"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/eventnamelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventLabel"
        android:layout_below="@+id/textView6"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/eventname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/eventnamelabel"
        android:paddingBottom="10dp"
        android:layout_below="@+id/textView6"/>

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventnamelabel"
        android:text="@string/dateLabel"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventname"
        android:paddingBottom="10dp"
        android:layout_toRightOf="@id/dateLabel"/>

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/month"
        android:layout_below="@+id/eventname"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"/>

    <TextView
        android:id="@+id/startLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateLabel"
        android:text="@string/startLabel"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/starttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/month"
        android:paddingBottom="10dp"
        android:layout_toRightOf="@+id/startLabel"/>

    <TextView
        android:id="@+id/endLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startLabel"
        android:text="@string/endLabel"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/endtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/starttime"
        android:paddingBottom="10dp"
        android:layout_toRightOf="@+id/endLabel"/>

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/endLabel"
        android:text="@string/locationLabel"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endtime"
        android:paddingBottom="10dp"
        android:layout_toRightOf="@+id/locationLabel"/>

    <TextView
        android:id="@+id/groupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationLabel"
        android:text="@string/groupLabel"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/groupname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:paddingBottom="10dp"
        android:layout_toRightOf="@+id/groupLabel"/>

    <TextView
        android:id="@+id/leaderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupLabel"
        android:text="@string/leaderLabel"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/leadername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/groupname"
        android:paddingBottom="10dp"
        android:layout_toRightOf="@+id/leaderLabel"/>

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaderLabel"
        android:text="@string/phoneLabel"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/leaderphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leadername"
        android:paddingBottom="10dp"
        android:layout_toRightOf="@+id/phoneLabel"/>

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneLabel"
        android:text="@string/emailLabel"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/leaderemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leaderphone"
        android:paddingBottom="10dp"
        android:layout_toRightOf="@+id/emailLabel"/>
</RelativeLayout>
